--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-version=2.14.1-SNAPSHOT
+version=2.14.1-4PM-SNAPSHOT
 org.gradle.caching=true
 org.gradle.parallel=true
 junit5Version=5.10.2
 junit4Version=4.13.2
-confluentVersion=7.6.0
-kafkaVersion=3.6.1
+confluentVersion=7.6.1
+kafkaVersion=3.6.2
 log4jVersion=2.23.0
 org.gradle.jvmargs=-Xmx2048m
